# tidepool

./: .gitignore  .mcp.json  .session-test-env.sh  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  README.md  coverage-gaps.md  ctx.md  flake.nix  h2-report.md.tmp  h4-report.md.tmp  trap-sigill-audit.md
core-bridge-derive/: Cargo.toml
core-bridge-derive/src/: codegen.rs  lib.rs  parse.rs
core-bridge-derive/tests/: derive_tests.rs
core-effect/: Cargo.toml
core-effect/src/: dispatch.rs  error.rs  lib.rs  machine.rs
core-testing/: Cargo.toml
core-testing/benches/: eval.rs  heap.rs  optimize.rs
core-testing/src/: lib.rs  oracle.rs
examples/guess/: Cargo.toml  Guess.hs
examples/guess-interpreted/: Cargo.toml
examples/mcp-server/: Cargo.toml
examples/tide/: Cargo.toml  test.tide
haskell/: .gitignore  CLAUDE.md  regen-corpus.sh  tidepool-extract-dev.sh  tidepool-harness.cabal
haskell/app/: Main.hs
haskell/spike-extract/: README.md  Spike.hs
haskell/spike-optionc/: README.md  Spike.hs
haskell/test/: Identity.hs  Suite.hs  TextSuite.hs  text_length_core.hs
haskell/test-session/: SessionCTest.hs
haskell/test-varid/: VarIdMechanismTest.hs
tidepool/: Cargo.toml  build.rs
tidepool-bignum/: Cargo.toml
tidepool-bignum/src/: lib.rs
tidepool-bridge/: Cargo.toml
tidepool-bridge-derive/: Cargo.toml
tidepool-bridge-derive/src/: codegen.rs  lib.rs  parse.rs
tidepool-bridge-derive/tests/: arity_disambiguation.rs  derive_tests.rs  module_qualification.rs  phantom_data.rs
tidepool-bridge/src/: error.rs  impls.rs  json.rs  lib.rs  traits.rs
tidepool-bridge/tests/: ambiguity_assert.rs  error_cases.rs  proptest_text.rs  roundtrip.rs
tidepool-codegen/: CLAUDE.md  Cargo.toml  build.rs
tidepool-codegen/csrc/: sigsetjmp_wrapper.c
tidepool-codegen/src/: alloc.rs  binding_table.rs  context.rs  coverage.rs  datacon_env.rs  debug.rs  effect_machine.rs  heap_bridge.rs  host_fns.rs  jit_machine.rs  layout.rs  lib.rs  nursery.rs  old_space.rs  pipeline.rs  signal_safety.rs  stack_map.rs  yield_type.rs
tidepool-codegen/tests/: converge_proof.rs  deep_force_nf.rs  effect_machine.rs  emit_case.rs  emit_expr.rs  emit_join.rs  emit_join_advanced.rs  emit_letrec_advanced.rs  emit_letrec_con.rs  emit_primop.rs  error_binding_guard.rs  external_cancellation.rs  external_env_resolution.rs  gc_audit.rs  gc_frame_walker.rs  haskell_suite_differential.rs  heap_bridge_tests.rs  heap_force_tests.rs  joinrec_differential.rs  lazy_let_guard.rs  letrec_lazy_guard.rs  normalize_differential.rs  primop_bitcount_differential.rs  proptest_boundary_roundtrip.rs  proptest_case_dispatch.rs  proptest_compile.rs  proptest_differential.rs  proptest_gc_recursion.rs  proptest_ghc_idioms.proptest-regressions  proptest_ghc_idioms.rs  proptest_ghc_idioms_widen.rs  proptest_heap_layout.rs  proptest_host_arrays.proptest-regressions  proptest_host_arrays.rs  proptest_host_fns.rs  proptest_jit_dispatch.proptest-regressions  proptest_jit_dispatch.rs  proptest_numeric_conversions.rs  proptest_parked_registry.rs  proptest_primops_differential.rs  (+8 more)
tidepool-effect/: Cargo.toml
tidepool-effect/src/: dispatch.rs  error.rs  machine.rs
tidepool-effect/tests/: proptest_effect.rs  proptest_effect_machine.rs  proptest_freer_queue.rs
tidepool-eval/: CLAUDE.md  Cargo.toml
tidepool-eval/src/: env.rs  error.rs  eval.rs  heap.rs  lib.rs  pass.rs  value.rs
tidepool-eval/tests/: deep_drop.rs  haskell_suite.rs  text_suite.rs
tidepool-handlers/: CLAUDE.md  Cargo.toml
tidepool-handlers/src/: lib.rs
tidepool-heap/: Cargo.toml
tidepool-heap/src/: arena.rs  layout.rs  lib.rs
tidepool-heap/tests/: gc_unit.rs  proptest_heap.rs
tidepool-lsp/: CLAUDE.md  Cargo.toml
tidepool-lsp/src/: diff.rs  jsonrpc.rs  main.rs  registry.rs  resolve.rs
tidepool-macro/: Cargo.toml
tidepool-macro/src/: expand.rs  lib.rs
tidepool-macro/tests/: basic.rs  hs_eval.rs
tidepool-mcp/: CLAUDE.md  Cargo.toml
tidepool-mcp/src/: ask.rs  effect_decls.rs  eval_prep.rs  lib.rs  preamble.rs  resources.rs  server.rs  validate.rs
tidepool-mcp/tests/: dump313.rs  eval_partial_output_failclass.rs  repro_print_unresolved.rs  spliton_repro.rs  text_breakon_replace_mcp.rs
tidepool-optimize/: Cargo.toml
tidepool-optimize/src/: beta.rs  case_reduce.rs  dce.rs  inline.rs  lib.rs  occ.rs  partial.rs  pipeline.rs  rewrite.rs
tidepool-optimize/tests/: optimizer_pipeline.rs  proptest_correctness.rs  proptest_optimize.rs  proptest_optimizer.rs  proptest_optimizer_extended.rs  proptest_partial_eval.rs  stack_safety.rs
tidepool-repl/: CLAUDE.md  Cargo.toml
tidepool-repl/src/: ask.rs  command.rs  handlers.rs  introspect.rs  lib.rs  main.rs  server.rs  session.rs  state.rs  truncate.rs  worker.rs
tidepool-repl/tests/: ask_resume.rs  decl_error_mapping.rs  decl_plane.rs  effects_smoke.rs  error_recovery.rs  info_introspect.rs  lifecycle_meta.rs  lifecycle_state.rs  lost_session.rs  multi_binder.rs  name_shadowing.rs  repro_decl_library_import.rs  repro_t_multiline_sig.rs  session_acceptance.rs  shadow_rebind.rs  stub_fetch.rs  text_bind.rs  value_binding_acceptance.rs  value_fidelity.rs
tidepool-repr/: CLAUDE.md  Cargo.toml
tidepool-repr/src/: alpha.rs  builder.rs  datacon.rs  datacon_table.rs  frame.rs  free_vars.rs  lib.rs  normalize.rs  pretty.rs  session_ids.rs  subst.rs  tree.rs  types.rs  varid_check.rs
tidepool-repr/tests/: inspect_cbor.rs  proptest_cbor.rs  proptest_varid_defense.rs  stack_safety.rs
tidepool-runtime/: Cargo.toml
tidepool-runtime/src/: cache.rs  lib.rs  paths.rs  render.rs
tidepool-runtime/tests/: bignum_native.rs  bignum_phase1.rs  bytearray_bridge.rs  cache_tests.rs  cancellable_entry.rs  captured_real_core.rs  case_trap_graceful.rs  concurrent_eval.rs  cross_mode_existing.rs  cross_mode_targeted.rs  cross_mode_tests.rs  edge_cases.rs  edit_verbs.rs  effect_fold_regression.rs  effect_prompt_sigill.rs  fmt_nonfinite.rs  fmt_spec_reject.rs  gc_and_errors.rs  gotcha_registry.rs  integration.rs  lazy_bisect.rs  (+45 more)
tidepool-testing/: Cargo.toml
(+1020 files in other folders)
