[workspace]
members = [
    "tidepool-repr",
    "tidepool-eval",
    "tidepool-testing",
    "tidepool-heap",
    "tidepool-optimize",
    "tidepool-bridge",
    "tidepool-bridge-derive",
    "tidepool-macro",
    "tidepool-effect",
    "tidepool-codegen",
    "tidepool-runtime",
    "tidepool-mcp",
    "tidepool",
    "examples/guess",
    "examples/guess-interpreted",
    "examples/tide",
]
resolver = "2"