[package]
name = "core-bridge-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
core-bridge = { path = "../core-bridge" }
core-repr = { path = "../core-repr" }
core-eval = { path = "../core-eval" }
core-testing = { path = "../core-testing" }
