[package]
name = "core-effect"
version = "0.1.0"
edition = "2021"

[features]
default = []
async = []

[dependencies]
core-repr = { path = "../core-repr" }
core-eval = { path = "../core-eval" }
core-bridge = { path = "../core-bridge" }
frunk = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
