cabal-version: 2.4
name:          tidepool-harness
version:       0.1.0.0
build-type:    Simple

executable tidepool-harness
  main-is:          Main.hs
  hs-source-dirs:   app, src
  other-modules:
    Tidepool.GhcPipeline
    Tidepool.Translate
    Tidepool.Resolve
    Tidepool.CborEncode
  build-depends:
    base         >= 4.20 && < 5,
    ghc          >= 9.12 && < 9.13,
    bytestring,
    containers,
    filepath,
    directory,
    process,
    text,
    cborg,
    mtl
  default-language: GHC2024
  default-extensions: OverloadedStrings
  ghc-options:      -Wall
-- nix cache bust 1771703477
-- nix cache bust 1771703850
-- nix cache bust metadata-fix
