cabal-version: 2.4
name:          tidepool-harness
version:       0.1.0.0
build-type:    Simple

executable tidepool-extract-bin
  main-is:          Main.hs
  hs-source-dirs:   app, src, lib
  other-modules:
    Tidepool.Binders
    Tidepool.GhcPipeline
    Tidepool.Session
    Tidepool.Translate
    Tidepool.Resolve
    Tidepool.FatIface
    Tidepool.CborEncode
    Tidepool.Prelude
    Tidepool.FilePath
    Tidepool.Render
    Tidepool.Data.Text
    Tidepool.TextFormat
    Tidepool.Table
    Tidepool.Internal.DataTextProbe
    Tidepool.Aeson
    Tidepool.Aeson.Value
    Tidepool.Aeson.KeyMap
    Tidepool.Aeson.Lens
    Tidepool.Aeson.FromJSON
    Tidepool.QQ
    Tidepool.QQ.Fmt
    Tidepool.QQ.Fmt.Runtime
    Tidepool.QQ.PyF.Spec
    Tidepool.QQ.Json
    Tidepool.QQ.Validate
    Tidepool.Patch
    Tidepool.QQ.Patch
    Tidepool.QQ.HsMeta.Parse
    Tidepool.QQ.HsMeta.Settings
    Tidepool.QQ.HsMeta.Translate
  build-depends:
    base         >= 4.20 && < 5,
    ghc          >= 9.12 && < 9.13,
    ghc-boot     >= 9.12 && < 9.13,
    bytestring,
    containers,
    filepath,
    directory,
    process,
    template-haskell,
    text,
    cborg,
    mtl,
    lens
  default-language: GHC2024
  default-extensions: OverloadedStrings
  ghc-options:      -Wall

executable spike-extract
  main-is:          Spike.hs
  hs-source-dirs:   spike-extract, src
  other-modules:
    Tidepool.GhcPipeline
    Tidepool.Translate
    Tidepool.Resolve
    Tidepool.FatIface
  build-depends:
    base         >= 4.20 && < 5,
    ghc          >= 9.12 && < 9.13,
    ghc-boot     >= 9.12 && < 9.13,
    bytestring,
    containers,
    filepath,
    directory,
    process,
    text,
    mtl
  default-language: GHC2024
  default-extensions: OverloadedStrings
