[package]
name = "tidepool-bignum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Integer/Natural -> Double encoding helpers for the Tidepool JIT and tree-walker"
readme = "../README.md"

[dependencies]
