[package]
name = "tidepool-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Bridge between Rust types and Tidepool Core values"
readme = "../README.md"

[dependencies]
thiserror = "2"
tidepool-repr = { version = "0.1.0", path = "../tidepool-repr" }
tidepool-eval = { version = "0.1.0", path = "../tidepool-eval" }
serde_json = "1"

[dev-dependencies]
proptest = "1"
