[package]
name = "tidepool-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Cranelift-based JIT compiler for Tidepool Core"
readme = "../README.md"

[dependencies]
cranelift-codegen = "=0.129.1"
cranelift-frontend = "=0.129.1"
cranelift-jit = "=0.129.1"
cranelift-module = "=0.129.1"
cranelift-native = "=0.129.1"
target-lexicon = "0.13"
tidepool-repr = { version = "0.1.0", path = "../tidepool-repr" }
tidepool-heap = { version = "0.1.0", path = "../tidepool-heap" }
tidepool-eval = { version = "0.1.0", path = "../tidepool-eval" }
tidepool-effect = { version = "0.1.0", path = "../tidepool-effect" }
thiserror = "1"
recursion = "0.5.4"
rustc-hash = "2.1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
cc = "1"

[dev-dependencies]
proptest = "1"
serial_test = "3"
tidepool-testing = { path = "../tidepool-testing" }
