[package]
name = "tidepool-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Cranelift-based JIT compiler for Tidepool Core"
readme = "../README.md"

[dependencies]
cranelift-codegen = "=0.129.1"
cranelift-frontend = "=0.129.1"
cranelift-jit = "=0.129.1"
cranelift-module = "=0.129.1"
cranelift-native = "=0.129.1"
target-lexicon = "0.13"
tidepool-repr = { version = "0.1.0", path = "../tidepool-repr" }
tidepool-bignum = { version = "0.1.0", path = "../tidepool-bignum" }
tidepool-heap = { version = "0.1.0", path = "../tidepool-heap" }
tidepool-eval = { version = "0.1.0", path = "../tidepool-eval" }
tidepool-bridge = { version = "0.1.0", path = "../tidepool-bridge" }
tidepool-effect = { version = "0.1.0", path = "../tidepool-effect" }
thiserror = "1"
recursion = "0.5.4"
rustc-hash = "2.1.0"
# Stack-growth insurance at the emit recursion spine (emit_node). Tiny, widely
# vendored (rustc itself uses it). NEW external dep — sanctioned for the
# stack-safety pass; flagged for human veto at merge.
stacker = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
cc = "1"

[dev-dependencies]
proptest = "1"
serial_test = "3"
tidepool-testing = { path = "../tidepool-testing" }
# Test-only: the real `DispatchEffect` impls live exclusively on frunk's
# HCons/HNil. proptest_jit_dispatch.rs must drive BOTH the JIT machine and the
# eval EffectMachine through genuine handler HLists to differentially test the
# dispatch loop and tag routing; there is no reachable re-export. Dev-dep only —
# production crate graph is unchanged. See plans/proptest-findings-dispatch.md.
frunk = "0.4"
