[package]
name = "tidepool-effect"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Effect system and handlers for Tidepool Core"
readme = "../README.md"

[features]
default = []
async = []

[dependencies]
tidepool-repr = { version = "0.0.1", path = "../tidepool-repr" }
tidepool-eval = { version = "0.0.1", path = "../tidepool-eval" }
tidepool-bridge = { version = "0.0.1", path = "../tidepool-bridge" }
frunk = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
proptest = "1"
