[package]
name = "tidepool-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Tree-walking interpreter for Tidepool Core"
readme = "../README.md"

[dependencies]
tidepool-repr = { version = "0.1.0", path = "../tidepool-repr" }
im = "15"
thiserror = "2"
