[package]
name = "tidepool-heap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Memory management and heap layout for Tidepool Core"
readme = "../README.md"

[dependencies]
tidepool-repr = { version = "0.0.1", path = "../tidepool-repr" }
tidepool-eval = { version = "0.0.1", path = "../tidepool-eval" }
bumpalo = "3"

[dev-dependencies]
proptest = "1"
