[package]
name = "tidepool-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Persistent language-server sidecar for the tidepool LSP effect"

[[bin]]
name = "tidepool-lsp-daemon"
path = "src/main.rs"

[dependencies]
serde_json = "1"
crossbeam-channel = "0.5"
