[package]
name = "tidepool-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Model Context Protocol (MCP) server for Tidepool"
readme = "../README.md"

[dependencies]
tidepool-runtime = { version = "0.0.1", path = "../tidepool-runtime" }
tidepool-eval = { version = "0.0.1", path = "../tidepool-eval" }
tidepool-repr = { version = "0.0.1", path = "../tidepool-repr" }
tidepool-effect = { version = "0.0.1", path = "../tidepool-effect" }
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
dyn-clone = "1.0"
frunk = "0.4"
schemars = "=1.2.1"
serde_json = "1"
tidepool-bridge = { version = "0.0.1", path = "../tidepool-bridge" }
tidepool-codegen = { version = "0.0.1", path = "../tidepool-codegen" }
