[package]
name = "tidepool-optimize"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tidepool-heavy-industries/tidepool"
description = "Optimization passes for Tidepool Core"

[dependencies]
tidepool-repr = { version = "0.1.0", path = "../tidepool-repr" }
tidepool-eval = { version = "0.1.0", path = "../tidepool-eval" }

[dev-dependencies]
tidepool-testing = { version = "0.1.0", path = "../tidepool-testing" }
proptest = "1"