[package]
name = "tidepool-repl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "GHCi-style session MCP server for Tidepool (resident JIT machine across turns)"
readme = "../README.md"

[[bin]]
name = "tidepool-repl"
path = "src/main.rs"

[lib]
name = "tidepool_repl"
path = "src/lib.rs"

[dependencies]
tidepool-repr = { version = "0.1.0", path = "../tidepool-repr" }
tidepool-eval = { version = "0.1.0", path = "../tidepool-eval" }
tidepool-effect = { version = "0.1.0", path = "../tidepool-effect" }
tidepool-codegen = { version = "0.1.0", path = "../tidepool-codegen" }
tidepool-runtime = { version = "0.1.0", path = "../tidepool-runtime" }
tidepool-mcp = { version = "0.1.0", path = "../tidepool-mcp" }
tidepool-bridge = { version = "0.1.0", path = "../tidepool-bridge" }
tidepool-bridge-derive = { version = "0.1.0", path = "../tidepool-bridge-derive" }
rmcp = { version = "0.16", features = ["server", "transport-io", "transport-streamable-http-server"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "signal", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
frunk = "0.4"
schemars = "1.2"
dirs = "6"
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
