[package]
name = "tidepool-repr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Intermediate representation for the Tidepool compiler"
readme = "../README.md"

[dependencies]
ciborium = "0.2"

[dev-dependencies]
proptest = "1"
tidepool-testing = { path = "../tidepool-testing" }
