[package]
name = "tidepool-repr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Intermediate representation for the Tidepool compiler"
readme = "../README.md"

[dependencies]
ciborium = "0.2"
thiserror = "2"
rustc-hash = "2.1.0"

[dev-dependencies]
proptest = "1"
serial_test = "3.4.0"
tidepool-testing = { path = "../tidepool-testing" }
