[package]
name = "tidepool-runtime"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tidepool-heavy-industries/tidepool"
description = "Runtime support for Tidepool applications"

[dependencies]
tidepool-repr = { version = "0.0.1", path = "../tidepool-repr" }
tidepool-eval = { version = "0.0.1", path = "../tidepool-eval" }
tidepool-effect = { version = "0.0.1", path = "../tidepool-effect" }
tidepool-codegen = { version = "0.0.1", path = "../tidepool-codegen" }
serde_json = "1"
tempfile = "3"
blake3 = "1"

[dev-dependencies]
frunk = "0.4"
tidepool-bridge-derive = { version = "0.0.1", path = "../tidepool-bridge-derive" }
tidepool-bridge = { version = "0.0.1", path = "../tidepool-bridge" }
tidepool-effect = { version = "0.0.1", path = "../tidepool-effect" }
tidepool-eval = { version = "0.0.1", path = "../tidepool-eval" }
tidepool-mcp = { version = "0.0.1", path = "../tidepool-mcp" }
