[package]
name = "tidepool-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Runtime support for Tidepool applications"
readme = "../README.md"

[dependencies]
thiserror = "2"
tidepool-repr = { version = "0.1.0", path = "../tidepool-repr" }
tidepool-eval = { version = "0.1.0", path = "../tidepool-eval" }
tidepool-effect = { version = "0.1.0", path = "../tidepool-effect" }
tidepool-codegen = { version = "0.1.0", path = "../tidepool-codegen" }
serde_json = "1"
tempfile = "3"
blake3 = "1"
which = "7"

[dev-dependencies]
proptest = "1"
tidepool-testing = { path = "../tidepool-testing" }
tidepool-optimize = { path = "../tidepool-optimize" }
frunk = "0.4"
tidepool-bridge-derive = { version = "0.1.0", path = "../tidepool-bridge-derive" }
tidepool-bridge = { version = "0.1.0", path = "../tidepool-bridge" }
tidepool-effect = { version = "0.1.0", path = "../tidepool-effect" }
tidepool-eval = { version = "0.1.0", path = "../tidepool-eval" }
tidepool-mcp = { path = "../tidepool-mcp" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serial_test = "3"
filetime = "0.2"
