[package]
name = "tidepool-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Testing utilities and benchmarks for Tidepool"
publish = false

[dependencies]
tidepool-repr = { version = "0.1.0", path = "../tidepool-repr" }
tidepool-eval = { version = "0.1.0", path = "../tidepool-eval" }
tidepool-heap = { version = "0.1.0", path = "../tidepool-heap" }
tidepool-optimize = { version = "0.1.0", path = "../tidepool-optimize" }
tidepool-codegen = { version = "0.1.0", path = "../tidepool-codegen" }
proptest = "1.10.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "eval"
harness = false

[[bench]]
name = "optimize"
harness = false

[[bench]]
name = "heap"
harness = false

[[bench]]
name = "codegen"
harness = false
