[package]
name = "tidepool-guess-interpreted"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tidepool-heavy-industries/tidepool"
description = "Guessing game example for Tidepool (Interpreted)"
publish = false

[dependencies]
tidepool-repr = { version = "0.1.0", path = "../../tidepool-repr" }
tidepool-eval = { version = "0.1.0", path = "../../tidepool-eval" }
tidepool-effect = { version = "0.1.0", path = "../../tidepool-effect" }
tidepool-bridge = { version = "0.1.0", path = "../../tidepool-bridge" }
tidepool-bridge-derive = { version = "0.1.0", path = "../../tidepool-bridge-derive" }
tidepool-macro = { version = "0.1.0", path = "../../tidepool-macro" }
frunk = "0.4"
rand = "0.8"

[package.metadata.tidepool]
haskell-deps = ["freer-simple"]