[package]
name = "tidepool-guess"
version = "0.1.0"
edition = "2021"

[dependencies]
core-repr = { path = "../../core-repr" }
core-eval = { path = "../../core-eval" }
core-effect = { path = "../../core-effect" }
core-bridge = { path = "../../core-bridge" }
core-bridge-derive = { path = "../../core-bridge-derive" }
tidepool-macro = { path = "../../tidepool-macro" }
frunk = "0.4"
rand = "0.8"

[package.metadata.tidepool]
haskell-deps = ["freer-simple"]
