[package]
name = "mcp-server-example"
version = "0.0.1"
edition = "2021"
publish = false

[[bin]]
name = "tidepool"
path = "src/main.rs"

[dependencies]
tidepool-mcp = { path = "../../tidepool-mcp" }
tidepool-effect = { path = "../../tidepool-effect" }
tidepool-eval = { path = "../../tidepool-eval" }
tidepool-bridge = { path = "../../tidepool-bridge" }
tidepool-bridge-derive = { path = "../../tidepool-bridge-derive" }
tidepool-repr = { path = "../../tidepool-repr" }
frunk = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
