[package]
name = "mcp-server-example"
version.workspace = true
edition.workspace = true
description = "Example MCP server demonstrating Tidepool effect handlers"
publish = false

[[bin]]
name = "tidepool"
path = "src/main.rs"

[dependencies]
tidepool-mcp = { path = "../../tidepool-mcp" }
tidepool-effect = { path = "../../tidepool-effect" }
tidepool-eval = { path = "../../tidepool-eval" }
tidepool-bridge = { path = "../../tidepool-bridge" }
tidepool-bridge-derive = { path = "../../tidepool-bridge-derive" }
tidepool-repr = { path = "../../tidepool-repr" }
ast-grep-core = "0.41"
ast-grep-language = "0.41"
frunk = "0.4"
ureq = "2"
url = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
