[package]
name = "tidepool-tide"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
core-repr = { path = "../../core-repr" }
core-bridge = { path = "../../core-bridge" }
core-bridge-derive = { path = "../../core-bridge-derive" }
core-eval = { path = "../../core-eval" }
core-effect = { path = "../../core-effect" }
tidepool-macro = { path = "../../tidepool-macro" }
codegen = { path = "../../codegen" }
frunk = "0.4"
ureq = "2"
rustyline = "15"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
miette = { version = "7", features = ["fancy"] }

[package.metadata.tidepool]
haskell-deps = ["freer-simple"]
